sampler/chain/projects/mockito/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/AdditionalMatchers.java:54: error: [NullAway] (INDEX= 5) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/stubbing/defaultanswers/ReturnsSmartNulls.java:56: error: [NullAway] (INDEX= 88) (Covered) returning @Nullable expression from method with @NonNull return type
                            return null;
                            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/creation/bytebuddy/InlineByteBuddyMockMaker.java:424: error: [NullAway] (INDEX= 196) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/stubbing/DoAnswerStyleStubbing.java:33: error: [NullAway] (INDEX= 44) (Covered) assigning @Nullable expression to @NonNull field
        stubbingStrictness = null;
                           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/invocation/InterceptedInvocation.java:201: error: [NullAway] (INDEX= 157) (Covered) returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^
	(see http://t.uber.com/nullaway )
